--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lucky Paws - Client Portal</title>
-    <script src="https://upload-widget.cloudinary.com/global/all.js"     type="text/javascript">  
-    </script>
+    <!-- <script src="https://upload-widget.cloudinary.com/global/all.js"     type="text/javascript">  
+    </script> -->
   </head>
   <body>
     <div id="root"></div>
